# tinyOS

./: .gitignore  .gitmodules  Dockerfile  GNUmakefile  LICENSE  README.md  TODO.txt  run.sh  run_qemu.sh
.github/workflows/: test_ci.yml
kernel/: .gitignore  Cargo.toml  GNUmakefile  build.rs  linker-x86_64.ld  rust-toolchain.toml  rustfmt.toml
kernel/.cargo/: config.toml
kernel/macro-tests/: Cargo.toml
kernel/macro-tests/src/: lib.rs
kernel/macro-tests/src/testing/: test_gen.rs
kernel/macros/: Cargo.toml
kernel/macros/src/: lib.rs
kernel/macros/src/common/: args.rs  fd_table.rs  mod.rs
kernel/macros/src/mem/: addr.rs
kernel/macros/src/test_gen/: mod.rs
kernel/src/: bootinfo.rs  include_bins.rs  lib.rs  main.rs  requests.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86/: cpu.rs  mod.rs  serial.rs
kernel/src/arch/x86/context/: mod.rs
kernel/src/arch/x86/interrupt/: gdt.rs  handlers.rs  idt.rs  mod.rs  pic.rs
kernel/src/arch/x86/mem/: addr.rs  mod.rs  paging.rs
kernel/src/arch/x86/paging/: alloc.rs  mod.rs
kernel/src/arch/x86/vga/: buf.rs  mod.rs
kernel/src/common/: mod.rs
kernel/src/common/logging/: print.rs
kernel/src/common/serial/: mod.rs
kernel/src/drivers/: mod.rs  resource.rs  wait_manager.rs
kernel/src/drivers/graphics/: colors.rs  framebuffers.rs  mod.rs  text.rs
kernel/src/drivers/keyboard/: keys.rs  mod.rs  queue.rs
kernel/src/drivers/tty/: mod.rs
kernel/src/drivers/tty/backends/: mod.rs
kernel/src/drivers/tty/frontend/: device.rs  mod.rs
kernel/src/kernel/: mod.rs
kernel/src/kernel/abi/syscalls/: funcs.rs  funcs___.rs  mod.rs  syscalls.txt  utils.rs
kernel/src/kernel/devices/: mod.rs
kernel/src/kernel/devices/graphics/: layout.txt  mod.rs
kernel/src/kernel/devices/tty/: io.rs  mod.rs  sink.rs  source.rs
kernel/src/kernel/elf/: mod.rs
kernel/src/kernel/fd/: mod.rs
kernel/src/kernel/fs/: builtin_bins.rs  fs_util.rs  mod.rs
kernel/src/kernel/fs/path/: mod.rs
kernel/src/kernel/fs/procfs/: mod.rs  register.rs
kernel/src/kernel/fs/ramfs/: mod.rs
kernel/src/kernel/fs/vfs/: mod.rs
kernel/src/kernel/graphics/: colors.rs  framebuffers.rs  mod.rs  text.rs
kernel/src/kernel/init/: mod.rs
kernel/src/kernel/io/: mod.rs
kernel/src/kernel/mem/: heap.rs  mod.rs
kernel/src/kernel/mem/addr/: mod.rs  phys.rs  virt.rs
kernel/src/kernel/mem/alloc/: linked_list.rs  mod.rs
kernel/src/kernel/mem/paging/: alloc.rs  map.rs  mod.rs  table.rs
kernel/src/kernel/threading/: context.rs  mod.rs  task.rs  tls.rs
kernel/src/kernel/threading/schedule/: mod.rs  round_robin.rs
kernel/src/kernel/threading/schedule/testing/: mod.rs  scheduler.rs
kernel/src/kernel/threading/trampoline/: mod.rs
kernel/src/kernel/threading/wait/: condition.rs  mod.rs
kernel/src/kernel/threading/wait/queues/: mod.rs
kernel/src/locks/: mod.rs  mutex.rs
kernel/src/services/graphics/: mod.rs  shapes.rs
kernel/src/term/: mod.rs
kernel/src/term/parse/: lexer.rs
kernel/src/term/render/: mod.rs
kernel/src/testing/: mod.rs  test.rs
kernel/src/utils/: mod.rs
kernel/src/utils/data_structures/: mod.rs  ring_buf.rs
kernel/src/utils/locks/: gkl.rs  mod.rs
kernel/src/utils/locks/primitive/: mod.rs  mutex.rs  semaphore.rs
kernel/src/utils/locks/reentrant/: mutex.rs  rwlock.rs
kernel/src/utils/locks/thread_safe/: mutex.rs  rwlock.rs
kernel/src/utils/sync/: mod.rs
kernel/src/utils/sync/primitive/: mod.rs  mutex.rs  rwlock.rs  semaphore.rs
kernel/tiny-os-common/: Cargo.toml
kernel/tiny-os-common/src/: lib.rs
kernel/tiny-os-common/src/logging/: mod.rs
kernel/tiny-os-common/src/testing/: kernel.rs  mod.rs
kernel/tiny-os-common/src/utils/: io.rs
kernel/tinyos-abi/: Cargo.toml
kernel/tinyos-abi/src/: consts.rs  flags.rs  lib.rs  types.rs
kernel/user_tasks/: exit  exit.asm  exit_linux.asm
