cargo-features = ["edition2024"]

[package]
name = "tiny_os"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]
members = [
  "macro-tests",
  "macros",
  "tiny-os-common"
]

[features]
default = []
test_run = []

[dependencies]
limine = "0.4"
x86_64 = "0.15.2"
os_macros = {path = "macros"}
tiny_os_common = { path = "./tiny-os-common", features = ["test_run"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
thiserror = { version = "2.0.12", default-features = false }
spin = "0.10.0"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
volatile = "0.6.1"
crossbeam = { version = "0.8.4", features = ["alloc"], default-features = false }
linked_list_allocator = "0.10.5"
uart_16550 = "0.3.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
