[package]
name = "tiny_os"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]
members = [
  "macro-tests",
  "macros",
  "tiny-os-common"
]

[features]
default = []
test_run = []

[dependencies]
limine = "0.5"
x86_64 = "0.15.2"
os_macros = { path = "macros" }
tiny_os_common = { path = "./tiny-os-common", features = ["test_run"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
thiserror = { version = "2.0.12", default-features = false }
spin = "0.10.0"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
volatile = "0.6.1"
crossbeam = { git = "https://github.com/lmeller-git/crossbeam", branch = "try_push_queue", features = ["alloc"], default-features = false }
linked_list_allocator = "0.10.5"
uart_16550 = "0.3.2"
embedded-graphics = "0.8.1"
conquer-once = { version = "0.4.0", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
acpi = { version = "5.2.0", features = ["alloc"] }
raw-cpuid = "11.5.0"
hashbrown = { version = "0.15.4" }
elf = { version = "0.8.0", features = ["alloc", "to_str"], default-features = false  }
lock_api = { version = "0.4.13", features = ["arc_lock"] }
bitflags = "2.9.2"
indexmap = { version = "2.11.1", default-features = false }
nblfq = { git = "https://github.com/lmeller-git/nblfq", default-features = false, features = ["alloc"] }
atomic-pool = "2.0.0"
portable-atomic = { version = "1", default-features = false, features = ["require-cas"] }
cfg-if = "1.0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
